syntax = "proto3";

package v1beta1;

service KMSService {
    rpc Decrypt(DecryptRequest) returns (DecryptResponse) {}
    rpc Encrypt(EncryptRequest) returns (EncryptResponse) {}
}

message DecryptRequest {
    bytes cipher = 1;
    // Version of the KMS plugin API, now use “v1beta1”
    string version = 2;
}

message DecryptResponse {
    bytes plain = 1;
}

message EncryptRequest {
    bytes plain = 1;
    // Version of the KMS plugin API, now use “v1beta1”
    string version = 2;
}

message EncryptResponse {
    bytes cipher = 1;
}

